lang/tests/compile_fail/init_self_recursive_typed_seed.stderr
error: unknown key-value directive `seeds = ...`
  --> tests/compile_fail/init_self_recursive_typed_seed.rs:18:41
   |
18 |     #[account(mut, init, payer = payer, seeds = Item::seeds(item.namespace), bump)]
   |                                         ^^^^^
